bam2bedgraph to NAMESPACE
From: lkie <l.kielpinski@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/RNAprobR@108738 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(slograt)
 export(swinsor)
 export(swinsor_vector)
 export(winsor)
+export(bam2bedgraph)
 import(Biostrings)
 import(GenomicFeatures)
 import(GenomicRanges)
