Fixed "Check" warnings regarding library imports
From: Nikos Sidiropoulos <nikos.sidiro@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/RNAprobR@108741 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
     Biostrings(>= 2.32.1),
     GenomicRanges(>= 1.16.4),
     Rsamtools(>= 1.16.1),
-    rtracklayer(>= 1.24.2)
+    rtracklayer(>= 1.24.2),
+    GenomicAlignments(>= 1.5.12)
 Suggests:
     BiocStyle
 License: GPL (>=2)
