--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 export(BED2txDb)
 export(GR2norm_df)
+export(bam2bedgraph)
 export(bedgraph2norm)
 export(comp)
 export(compdata)
@@ -15,10 +16,10 @@ export(slograt)
 export(swinsor)
 export(swinsor_vector)
 export(winsor)
-export(bam2bedgraph)
 import(Biostrings)
 import(GenomicFeatures)
 import(GenomicRanges)
 import(Rsamtools)
 import(plyr)
 import(rtracklayer)
+import(BiocGenerics)
