--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: RNAprobR
 Title: An R package for analysis of massive parallel sequencing based RNA
     structure probing data
 Version: 1.11.0
-Date: 2015-09-23
+Date: 2017-10-27
 Authors@R: c(person("Lukasz Jan", "Kielpinski", role=c("aut"),
     email="kielpinski@bio.ku.dk"), person("Nikos", "Sidiropoulos",
     role=c("cre", "aut"), email="nikos.sidiro@gmail.com"), person("Jeppe",
@@ -20,11 +20,17 @@ Depends:
 Imports:
     Biostrings(>= 2.32.1),
     GenomicRanges(>= 1.16.4),
+    IRanges(>= 2.10.5),
     Rsamtools(>= 1.16.1),
     rtracklayer(>= 1.24.2),
-    GenomicAlignments(>= 1.5.12)
+    GenomicAlignments(>= 1.5.12),
+    S4Vectors(>= 0.14.7),
+    graphics,
+    stats,
+    utils
 Suggests:
     BiocStyle
 License: GPL (>=2)
 LazyData: true
 biocViews: Coverage, Normalization, Sequencing, GenomeAnnotation
+RoxygenNote: 6.0.1
