--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,4 +22,18 @@ import(GenomicRanges)
 import(Rsamtools)
 import(plyr)
 import(rtracklayer)
-import(BiocGenerics)
+importFrom(BiocGenerics,as.vector)
+importFrom(GenomicAlignments,cigarWidthAlongReferenceSpace)
+importFrom(IRanges,IRanges)
+importFrom(S4Vectors,endoapply)
+importFrom(S4Vectors,runValue)
+importFrom(graphics,plot)
+importFrom(graphics,points)
+importFrom(graphics,segments)
+importFrom(stats,aggregate)
+importFrom(stats,lm)
+importFrom(stats,pnorm)
+importFrom(stats,quantile)
+importFrom(stats,sd)
+importFrom(utils,read.table)
+importFrom(utils,write.table)
